# marouba

./: .gitignore  LICENSE  MIDI_CAPTURE.md  PROFILES.md  README.md  Thumbs.db  VAULT_SPEC.md  marouba-mcp-spec-v2.md  marouba-vision-and-codex-brief-v2 (1).md  marouba-vision-and-codex-brief-v2.md  marouba-vision-and-codex-brief.md  n8n-existing-workflows.json  n8n-waitlist-workflow.json  notepad-hello-marouba.txt  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
Marouba Logo/: Thumbs.db
Scope Docs/: marouba-day1-codex-brief.md  marouba-scope-barry-review-v1.md  marouba-scope-v1.md  marouba-scope-v2.md  marouba-scope-v3.md  sitesnap-dad-guide.html
audits/: ableton-soak.md  ableton-uia-audit-2026-06-10.md  ableton.md  after-effects-adapter-audit.md  autocad-adapter-audit.md  blender-adapter-audit.md  comfyui-adapter-audit.md  fusion360-adapter-audit.md  goal19-mcp-token-log.jsonl  goal19-token-budget.md  obs-adapter-audit.md  paint-uia-audit-2026-06-10.md  photoshop-adapter-audit.md  premiere-adapter-audit.md  (+5 more)
companion-mac/src-tauri/: Cargo.toml  tauri.conf.json
companion-mac/src-tauri/src/: main.rs
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/crates/marouba-adapter/: Cargo.toml
companion/src-tauri/crates/marouba-adapter/examples/: dump_manifest.rs
companion/src-tauri/crates/marouba-adapter/src/: lib.rs
companion/src-tauri/icons/: icon.icns
companion/src-tauri/src/: ableton.rs  ableton_bridge.rs  ableton_installer.rs  classifier.rs  main.rs  paint.rs  paint_adapter.rs  route_switcher.rs  vault.rs
(+212 files in other folders)
